--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,8 +20,7 @@ http://www.tooplate.com/view/2110-character
 <body class="tm-bg-dark">
     <main class="tm-container masonry">
         <div class="item tm-bg-white tm-block tm-block-left" data-desktop-seq-no="1" data-mobile-seq-no="1">
-            <p class="tm-hero-text">&ldquo;Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                himenaeos. Maecenas vel lacinia ipsum, nec fermentum diam. Nulla nec gravida odio, eget vestibulum urna.&rdquo;</p>
+            <p class="tm-hero-text">&ldquo;OMG I can't do this.&rdquo;</p>
             <header class="tm-block-brand">
                 <div class="tm-bg-primary-dark tm-text-white tm-block-brand-inner">
                     <i class="fas fa-braille fa-3x"></i>
